needs to stop overlapping!

--- a/support.css
+++ b/support.css
@@ -134,19 +134,17 @@ form {
 .div1 {
   width: 100%;
   height: 8%;
-  margin-bottom: 10%;
-  margin-right: 2%;
+  margin-bottom: 15%;
 }
 .div2 {
   width: 100%;
   height: 6%;
-  margin-top: 10%;
-  margin-bottom: 10%;
-  margin-left: 2%;
+  margin-top: 15%;
+  margin-bottom: 15%;
 }
 .div3 {
   width: 100%;
   height: 30%;
-  margin-top: 10%;
+  margin-top: 15%;
 }
 }
